--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                 <p>Portland, Maine</p>
             </div>
         </div>
+        <h2 id="filler"></h2>
     </div>
     <div id="contact">
         <h2>The Tea Cozy</h2>
